# rust-raytracer-in-one-weekend

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  geo.rs  hit.rs  lib.rs  material.rs  num_traits.rs  prelude.rs  scene.rs  shape.rs
src/color/: linear.rs  rgba.rs
src/geo/: bounds2.rs  bounds3.rs  mat4.rs  point2.rs  point3.rs  ray.rs  transform.rs  vec2.rs  vec3.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  null.rs
src/shape/: sphere.rs  triangle.rs  triangle_fan.rs
