[package]
name = "pbrt"
version = "0.1.0"
authors = ["Stepan Stolyarov <stepan.stolyarov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
rand = "0.7"

[lib]
name = "pbrt"
path = "src/lib.rs"

[[bin]]
name = "pbrt"
path = "src/bin/main.rs"
